--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
-	<version>0.2.0</version>
+	<version>0.2.1-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
 
@@ -32,7 +32,7 @@
 		<connection>scm:git:git://github.com/${coordinate.username.project}.git</connection>
 		<developerConnection>scm:git:ssh://github.com:${coordinate.username.project}.git</developerConnection>
 		<url>http://github.com/${coordinate.username.project}/tree/master</url>
-	  <tag>v0.2.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<ciManagement>
