--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -10,7 +9,7 @@
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.2.0</version>
 	
 	<packaging>jar</packaging>
 
@@ -33,7 +32,8 @@
 		<connection>scm:git:git://github.com/${coordinate.username.project}.git</connection>
 		<developerConnection>scm:git:ssh://github.com:${coordinate.username.project}.git</developerConnection>
 		<url>http://github.com/${coordinate.username.project}/tree/master</url>
-	</scm>
+	  <tag>v0.2.0</tag>
+  </scm>
 
 	<ciManagement>
 		<system>Jenkins</system>
