--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.0.5</version>
+		<version>2.0.6</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
@@ -20,12 +20,11 @@
 
 		<sonar.pitest.mode>active</sonar.pitest.mode>
 		
-		<coordinate.username.project>earcam/io.earcam.unexceptional</coordinate.username.project>
+		<coordinate.username.project>earcam/${project.artifactId}</coordinate.username.project>
 	</properties>
 
 
-	<!-- <url>http://github.com/${coordinate.username.project}</url> -->
-	<url>http://unexceptional.earcam.io</url>
+	<url>http://github.com/${coordinate.username.project}</url>
 	<inceptionYear>2016</inceptionYear>
 
 	<scm>
@@ -33,7 +32,7 @@
 		<developerConnection>scm:git:ssh://github.com:${coordinate.username.project}.git</developerConnection>
 		<url>http://github.com/${coordinate.username.project}/tree/master</url>
 	  <tag>HEAD</tag>
-  </scm>
+	</scm>
 
 	<ciManagement>
 		<system>Jenkins</system>
@@ -47,9 +46,9 @@
 
 	<distributionManagement>
 		<site>
-			<id>gh-pages</id>
+			<id>github</id>
 			<name>Deployment through GitHub's site deployment plugin</name>
-			<url>${url.site.deploy}</url>
+			<url>http://earcam.github.io/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
 
