minor updates for site, added codecov.io upload in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@
     "mvn clean"
   ],
   "script": [
-    "mvn -v; mvn verify"
-  ]
+    "mvn -v; mvn -P analyse verify"
+  ],
+  "after_success": "bash <(curl -s https://codecov.io/bash)"
 }
