--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.0.6</version>
+		<version>2.0.7-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
@@ -15,12 +15,14 @@
 
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<version.java.platform>8</version.java.platform>
+		<version.java>1.${version.java.platform}</version.java>
+		<maven.compiler.source>${version.java}</maven.compiler.source>
+		<maven.compiler.target>${version.java}</maven.compiler.target>
 
-		<sonar.pitest.mode>active</sonar.pitest.mode>
-		
 		<coordinate.username.project>earcam/${project.artifactId}</coordinate.username.project>
+		
+		<skip.execution.pitest>false</skip.execution.pitest>
 	</properties>
 
 
@@ -82,7 +84,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
