--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
-	<version>0.2.0</version>
+	<version>0.2.1-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
 
