--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,42 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.0.8-SNAPSHOT</version>
+		<version>2.1.0</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
-	
 	<packaging>jar</packaging>
 
 	<description>A small cohesive module, leveraging Java 8 functional capabilities to remove most of the boiler-plate of handling checked exceptions.</description>
+	<url>https://unexceptional.earcam.io</url>
+	<inceptionYear>2016</inceptionYear>
+
+	<scm>
+		<connection>scm:git:git://bitbucket.com/${coordinate.username.project}.git</connection>
+		<developerConnection>scm:git:ssh://bitbucket.com:${coordinate.username.project}.git</developerConnection>
+		<url>http://bitbucket.com/${coordinate.username.project}/tree/master</url>
+	  <tag>HEAD</tag>
+	</scm>
+	<issueManagement>
+		<system>BitBucket</system>
+		<url>https://bitbucket.org/${coordinate.username.project}/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis</system>
+		<url>https://travis-ci.org/${coordinate.username.project}</url>
+	</ciManagement>
+	<distributionManagement>
+		<site>
+			<id>netlify</id>
+			<url>https://unexceptional.earcam.io</url>
+		</site>
+	</distributionManagement>
 
 	<properties>
 		<version.java.platform>8</version.java.platform>
@@ -25,34 +48,6 @@
 		
 		<skip.execution.pitest>false</skip.execution.pitest>
 	</properties>
-
-
-	<url>https://unexceptional.earcam.io</url>
-	<inceptionYear>2016</inceptionYear>
-
-	<scm>
-		<connection>scm:git:git://bitbucket.com/${coordinate.username.project}.git</connection>
-		<developerConnection>scm:git:ssh://bitbucket.com:${coordinate.username.project}.git</developerConnection>
-		<url>http://bitbucket.com/${coordinate.username.project}/tree/master</url>
-	  <tag>HEAD</tag>
-	</scm>
-
-	<ciManagement>
-		<system>Travis</system>
-		<url>https://travis-ci.org/${coordinate.username.project}</url>
-	</ciManagement>
-
-	<issueManagement>
-		<system>BitBucket</system>
-		<url>https://bitbucket.org/${coordinate.username.project}/issues</url>
-	</issueManagement>
-
-	<distributionManagement>
-		<site>
-			<id>netlify</id>
-			<url>https://unexceptional.earcam.io</url>
-		</site>
-	</distributionManagement>
 
 	<dependencies>
 		<dependency>
