correcting travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 - chmod go-rwx -R $HOME/.m2
 before_script:
 - mvn -v
-- wget https://bitbucket.org/earcam/io.earcam.maven/src/master/io.earcam.maven.configuration/src/main/resources/settings.xml -O $HOME/ci-settings.xml 
+- wget https://bitbucket.org/earcam/io.earcam.maven/raw/master/io.earcam.maven.configuration/src/main/resources/settings.xml -O $HOME/ci-settings.xml 
 - mvn --settings $HOME/ci-settings.xml -Dartifact='io.earcam.maven:io.earcam.maven.configuration:[0,)' -DremoteRepositories=https://oss.sonatype.org/content/repositories/snapshots org.apache.maven.plugins:maven-dependency-plugin:3.0.1:get
 script:
 - mvn -U -P analyse,report,sonar
