--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,4 +11,4 @@ pipelines:
         script:
           - wget https://bitbucket.org/earcam/io.earcam.maven/raw/master/io.earcam.maven.toolchain/src/main/resources/toolchain/continuous-integration-hotspot-linux-debian-amd64.xml -O  ${HOME}/.m2/toolchains.xml
           - wget https://bitbucket.org/earcam/io.earcam.maven/raw/master/io.earcam.maven.configuration/src/main/resources/settings.xml -O ${HOME}/ci-settings.xml 
-          - mvn -B verify
+          - mvn -s ${HOME}/ci-settings.xml -B verify
