--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,7 +1,8 @@
 # See https://confluence.atlassian.com/x/zd-5Mw for examples
+# See https://hub.docker.com/r/earcam/io.earcam.docker.ci/
 # -----
 # 
-image: maven:3.5.0
+image: earcam/io.earcam.docker.ci:latest
 
 pipelines:
   default:
@@ -11,4 +12,4 @@ pipelines:
         script:
           - wget https://bitbucket.org/earcam/io.earcam.maven/raw/master/io.earcam.maven.toolchain/src/main/resources/toolchain/continuous-integration-hotspot-linux-debian-amd64.xml -O  ${HOME}/.m2/toolchains.xml
           - wget https://bitbucket.org/earcam/io.earcam.maven/raw/master/io.earcam.maven.configuration/src/main/resources/settings.xml -O ${HOME}/ci-settings.xml 
-          - mvn -s ${HOME}/ci-settings.xml -B verify
+          - mvn -s ${HOME}/ci-settings.xml -P '!strict' -B verify
