--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.1.1-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
@@ -45,7 +45,7 @@
 		<maven.compiler.target>${version.java}</maven.compiler.target>
 
 		<coordinate.username.project>earcam/${project.artifactId}</coordinate.username.project>
-		
+
 		<skip.execution.pitest>false</skip.execution.pitest>
 	</properties>
 
@@ -77,50 +77,17 @@
 			<version>2.0.0.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.11.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>de.thetaphi</groupId>
-				<artifactId>forbiddenapis</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<id>check</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<bundledSignatures>
-								<bundledSignature>jdk-unsafe</bundledSignature>
-								<bundledSignature>jdk-internal</bundledSignature>
-								<bundledSignature>jdk-deprecated</bundledSignature>
-								<bundledSignature>jdk-non-portable</bundledSignature>
-								<bundledSignature>jdk-system-out</bundledSignature>
-								<bundledSignature>jdk-reflection</bundledSignature>
-							</bundledSignatures>
-						</configuration>
-					</execution>
-					<execution>
-						<id>testCheck</id>
-						<goals>
-							<goal>testCheck</goal>
-						</goals>
-						<configuration>
-							<bundledSignatures>
-								<bundledSignature>jdk-unsafe</bundledSignature>
-								<bundledSignature>jdk-internal</bundledSignature>
-								<bundledSignature>jdk-deprecated</bundledSignature>
-								<bundledSignature>jdk-non-portable</bundledSignature>
-								<bundledSignature>jdk-system-out</bundledSignature>
-								<!-- <bundledSignature>jdk-reflection</bundledSignature> -->
-							</bundledSignatures>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -168,7 +135,8 @@
 						<supportedProjectType>jar</supportedProjectType>
 					</supportedProjectTypes>
 					<instructions>
-						<Bundle-Vendor>${project.developers[0].name} - ${project.organization.name}</Bundle-Vendor>
+						<Bundle-Vendor>${project.developers[0].name} -
+							${project.organization.name}</Bundle-Vendor>
 						<Bundle-ContactAddress>${project.organization.url}</Bundle-ContactAddress>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-DocURL>${project.url}</Bundle-DocURL>
@@ -202,23 +170,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit4</artifactId>
-						<version>2.20.1</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
-					<parallel>false</parallel>
 					<testFailureIgnore>false</testFailureIgnore>
 					<includes>
 						<include>**/*Test.java</include>
