removed snapshot site skin dep, travis to generate jacoco xml for codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,5 @@ before_script:
 - mvn -v
 script:
 - mvn --settings $HOME/ci-settings.xml -U -P analyse,report,sonar
+- mvn --settings $HOME/ci-settings.xml -U -P analyse,report,site
 after_success: bash <(curl -s https://codecov.io/bash)
