--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.1.2</version>
+		<version>2.1.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
-	<version>0.4.1-SNAPSHOT</version>
+	<version>0.5.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<description>A small cohesive module, leveraging Java 8 functional capabilities to remove most of the boiler-plate of handling checked exceptions.</description>
@@ -128,8 +128,8 @@
 						<supportedProjectType>jar</supportedProjectType>
 					</supportedProjectTypes>
 					<instructions>
-						<Bundle-Vendor>${project.developers[0].name} -
-							${project.organization.name}</Bundle-Vendor>
+						<Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
+						<Bundle-Vendor>${project.developers[0].name} - ${project.organization.name}</Bundle-Vendor>
 						<Bundle-ContactAddress>${project.organization.url}</Bundle-ContactAddress>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-DocURL>${project.url}</Bundle-DocURL>
