--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.earcam.maven</groupId>
 		<artifactId>io.earcam.maven.pom</artifactId>
-		<version>2.1.3-SNAPSHOT</version>
+		<version>2.2.0</version>
 	</parent>
 
 	<groupId>io.earcam</groupId>
@@ -41,13 +41,19 @@
 	<properties>
 		<version.java.platform>8</version.java.platform>
 		<version.java>1.${version.java.platform}</version.java>
+
 		<maven.compiler.source>${version.java}</maven.compiler.source>
 		<maven.compiler.target>${version.java}</maven.compiler.target>
 
 		<coordinate.username.project>earcam/${project.artifactId}</coordinate.username.project>
 
-		<skip.execution.pitest>false</skip.execution.pitest>
 		<version.junit5>5.2.0</version.junit5>
+		<version.maven.plugin.site>3.6</version.maven.plugin.site><!-- downgraded due to doxia issues -->
+
+		<java.home.9>/usr/lib/jvm/java-9-oracle</java.home.9>
+		<java.home.10>/usr/lib/jvm/java-10-oracle</java.home.10>
+
+		<skip.execution.pitest>false</skip.execution.pitest>
 	</properties>
 
 	<dependencies>
@@ -65,14 +71,14 @@
 			<version>${version.junit5}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-launcher</artifactId>
 			<version>1.2.0</version>
 			<scope>test</scope>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
@@ -89,6 +95,37 @@
 	</dependencies>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<inherited>true</inherited>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>build-helper-maven-plugin</artifactId>
+										<versionRange>[3,4)</versionRange>
+										<goals>
+											<goal>add-test-source</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnConfiguration>true</runOnConfiguration>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -127,7 +164,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>3.4.0</version>
+				<version>3.5.1</version>
 				<extensions>true</extensions>
 				<configuration>
 					<archive>
@@ -138,7 +175,8 @@
 					</supportedProjectTypes>
 					<instructions>
 						<Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
-						<Bundle-Vendor>${project.developers[0].name} - ${project.organization.name}</Bundle-Vendor>
+						<Bundle-Vendor>${project.developers[0].name} -
+							${project.organization.name}</Bundle-Vendor>
 						<Bundle-ContactAddress>${project.organization.url}</Bundle-ContactAddress>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-DocURL>${project.url}</Bundle-DocURL>
@@ -182,6 +220,32 @@
 						<org.openjdk.java.util.stream.tripwire>true</org.openjdk.java.util.stream.tripwire>
 					</systemProperties>
 				</configuration>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jdk9-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<jvm>${java.home.9}/bin/java</jvm>
+						</configuration>
+					</execution>
+					<execution>
+						<id>jdk10-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<jvm>${java.home.10}/bin/java</jvm>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
