--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ before_script:
 script:
 - mvn --settings $HOME/ci-settings.xml -U -P jdk-oracle,analyse,report,sonar  -Drevapi.skip=true
 - mvn --settings $HOME/ci-settings.xml -U -P jdk-oracle,analyse,report,site  -Drevapi.skip=true
-- #mvn --settings $HOME/ci-settings.xml org.eluder.coveralls:coveralls-maven-plugin:report
+- mvn --settings $HOME/ci-settings.xml org.eluder.coveralls:coveralls-maven-plugin:report
 after_success: bash <(curl -s https://codecov.io/bash)
