--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>io.earcam</groupId>
 	<artifactId>io.earcam.unexceptional</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<description>A small cohesive module, leveraging Java 8 functional capabilities to remove most of the boiler-plate of handling checked exceptions.</description>
@@ -21,7 +21,7 @@
 		<connection>scm:git:ssh://git@bitbucket.org/${coordinate.username.project}.git</connection>
 		<developerConnection>scm:git:ssh://git@bitbucket.org/${coordinate.username.project}.git</developerConnection>
 		<url>http://bitbucket.org/${coordinate.username.project}.git</url>
-		<tag>HEAD</tag>
+		<tag>v1.0.0</tag>
 	</scm>
 	<issueManagement>
 		<system>BitBucket</system>
@@ -63,7 +63,7 @@
 			even with 'combine.self="append"', 
 			but we can use late binding
 		-->
-		<surefire.argLine></surefire.argLine>
+		<surefire.argLine />
 		<jpms.surefire.argLine>--add-opens ${project.artifactId}/${project.artifactId}=ALL-UNNAMED</jpms.surefire.argLine>
 	</properties>
 
